# OCCT

./: .gitignore  CMakeLists.txt  boolean_migration_progress.md  migrate_commands_v2.py
adm/: MODULES  (+1 more)
src/DataExchange/TKDE/: CMakeLists.txt  EXTERNLIB.cmake  PACKAGES.cmake
src/DataExchange/TKDE/GTests/: CMakeLists.txt  FILES.cmake  TKDE_Test.cxx
src/DataExchange/TKDE/ODE/: FILES.cmake  ODE_Archive.cxx  ODE_Archive.hxx  ODE_Curve2dFile.cxx  ODE_Curve2dFile.hxx  ODE_Curve3dFile.cxx  ODE_Curve3dFile.hxx  ODE_FORMAT_DESIGN.md  ODE_IMPLEMENTATION_PROGRESS.md  ODE_Manifest.cxx  ODE_Manifest.hxx  ODE_Object.cxx  ODE_Object.hxx  ODE_ObjectRef.cxx  ODE_ObjectRef.hxx  ODE_PolygonFile.cxx  ODE_PolygonFile.hxx  ODE_Status.hxx  ODE_SurfaceFile.cxx  ODE_SurfaceFile.hxx  ODE_TopologyFile.cxx  ODE_TopologyFile.hxx  ODE_TriangulationFile.cxx  ODE_TriangulationFile.hxx
src/DataExchange/TKDE/ODEHash/: FILES.cmake  ODEHash_AxisPlacement.pxx  ODEHash_AxisPlacement2d.pxx  ODEHash_BSplineCurve2dHasher.pxx  ODEHash_BSplineCurveHasher.pxx  ODEHash_BSplineSurfaceHasher.pxx  ODEHash_BezierCurve2dHasher.pxx  ODEHash_BezierCurveHasher.pxx  ODEHash_BezierSurfaceHasher.pxx  ODEHash_Circle2dHasher.pxx  ODEHash_CircleHasher.pxx  ODEHash_ConicalSurfaceHasher.pxx  ODEHash_Curve2dHasher.cxx  ODEHash_Curve2dHasher.hxx  ODEHash_Curve3dHasher.cxx  ODEHash_Curve3dHasher.hxx  ODEHash_CylindricalSurfaceHasher.pxx  ODEHash_Direction2dHasher.pxx  ODEHash_DirectionHasher.pxx  ODEHash_Ellipse2dHasher.pxx  ODEHash_EllipseHasher.pxx  ODEHash_Hyperbola2dHasher.pxx  ODEHash_HyperbolaHasher.pxx  ODEHash_Line2dHasher.pxx  ODEHash_LineHasher.pxx  ODEHash_OffsetCurve2dHasher.pxx  ODEHash_OffsetCurveHasher.pxx  ODEHash_OffsetSurfaceHasher.pxx  ODEHash_Parabola2dHasher.pxx  ODEHash_ParabolaHasher.pxx  ODEHash_PlaneHasher.pxx  ODEHash_Point2dHasher.pxx  ODEHash_PointHasher.pxx  ODEHash_RectangularTrimmedSurfaceHasher.pxx  (+9 more)
(+2991 files in other folders)
